# AgriBridge

./: README.md  lighthouserc.json  package-lock.json  package.json  root_config.json  tailwind.config.js  test_auth.sh  test_product_management.sh  todo_list.md
.github/workflows/: ci-cd.yml  ci.yml
backend/: .env  README.md  pyproject.toml  run_tests.sh
backend/backend/: app.py
backend/tests/: test_app.py
frontend/web/: package-lock.json  package.json
frontend/web/.parcel-cache/: 7f973df67467291d-AssetGraph-0  lock.mdb  requestGraph-nodes-0-90119cf973c747f0-0  requestGraph-nodes-1-90119cf973c747f0-0  snapshot-90119cf973c747f0.txt
frontend/web/src/: App.js  api.js  index.html  index.js
src/: App.js  App.tsx
src/components/: Footer.js  Header.js
src/components/common/: Header.js  LoginForm.js  (+1 more)
src/context/: AppContext.js  AuthContext.js  ProductContext.js
src/contexts/: ProfileContext.js
src/growers-gate-backend/: .env  Dockerfile  api.js  check_db.js  package-lock.json  package.json  pyproject.toml
src/growers-gate-backend/.mdb/: meta.json
src/growers-gate-backend/__tests__/: api.test.js
src/growers-gate-frontend/: jest.config.js  package-lock.json  package.json
src/hooks/: useAuth.js  useCommunity.js  useOrders.js  useProducts.js  useProfile.js
src/pages/: FarmerProfilePage.js  LoginPage.js  UserProfilePage.js
src/services/: api.js  authService.js  communityService.js  orderService.js  productService.js  profileService.js
src/styles/: App.css  Theme.css
src/utils/: calculatePrice.js  encryptionUtils.js  formatDate.js
(+52 files in other folders)
