[tool.poetry]
name = "growers-gate-backend"
version = "0.1.0"
description = "Backend for the Growers Gate application"
authors = ["kasinadhsarma <kasinadhsarma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pyjwt = "^2.1.0"
bcrypt = "^3.2.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000"
